// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders checked 1`] = `
<label
  className="cpt-checkbox"
  data-label-left={false}
  htmlFor="checkbox-test"
>
  <input
    checked={true}
    id="checkbox-test"
    onChange={[Function]}
    type="checkbox"
  />
  <span>
    test label
  </span>
</label>
`;

exports[`Checkbox renders label 1`] = `
<label
  className="cpt-checkbox"
  data-label-left={false}
  htmlFor="checkbox-test"
>
  <input
    checked={false}
    id="checkbox-test"
    onChange={[Function]}
    type="checkbox"
  />
  <span>
    test label
  </span>
</label>
`;

exports[`Checkbox renders label on left 1`] = `
<label
  className="cpt-checkbox"
  data-label-left={true}
  htmlFor="checkbox-test"
>
  <span>
    test label
  </span>
  <input
    checked={false}
    id="checkbox-test"
    onChange={[Function]}
    type="checkbox"
  />
</label>
`;

exports[`Checkbox renders unchecked 1`] = `
<label
  className="cpt-checkbox"
  data-label-left={false}
  htmlFor="checkbox-test"
>
  <input
    checked={false}
    id="checkbox-test"
    onChange={[Function]}
    type="checkbox"
  />
  <span>
    test label
  </span>
</label>
`;
